# cds-migrator-kit

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE-NOTES.rst  VideosDockerfile  babel.ini  cern-org-timeline.html  docker-compose.full.yml  docker-compose.yml  docker-services.yml  my.docker-compose.yml  pytest.ini  requirements-devel.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: dockerpublish.yml  tests.yml
cds_migrator_kit/: __init__.py  app.py  base_config.py  base_minter.py  cli.py  config.py  errors.py  ext.py  factory.py  handlers.py  import_utils.py  migration_config.py  permissions.py  version.py  views.py  wsgi.py  xml_to_json_dump.py
cds_migrator_kit/circulation/: __init__.py
cds_migrator_kit/circulation/items/: __init__.py  api.py  cli.py
cds_migrator_kit/circulation/users/: __init__.py  api.py  cli.py
cds_migrator_kit/extract/: __init__.py  extract.py
cds_migrator_kit/modules/: __init__.py
cds_migrator_kit/modules/migrator/: __init__.py  cli.py  errors.py  ext.py  handlers.py  log.py  records.py  utils.py
cds_migrator_kit/rdm/: README.md  __init__.py  cli.py  migration_config.py  permissions.py  runner.py  streams.yaml  streams_done.yaml  streams_shelved.yaml
cds_migrator_kit/rdm/affiliations/: __init__.py  log.py  runner.py  streams.py  transform.py
cds_migrator_kit/rdm/affiliations/xml_processing/: __init__.py
cds_migrator_kit/rdm/comments/: __init__.py  extract.py  load.py  log.py  runner.py  streams.py
cds_migrator_kit/rdm/data/courier/: duplicated_pids.json
cds_migrator_kit/rdm/data/it_dep/: duplicated_pids.json
cds_migrator_kit/rdm/data/thesis/: README.md  duplicated_pids.json
cds_migrator_kit/rdm/migration/: README.md  cli.py  extract.py  handlers.py  load.py  runner.py  streams.py  streams.yaml
cds_migrator_kit/rdm/migration/affiliations/: load.py  runner.py  streams.py  transform.py
cds_migrator_kit/rdm/migration/load/: __init__.py  load.py
cds_migrator_kit/rdm/migration/stats/: __init__.py  config.py  event_generator.py  load.py  log.py  run.py  runner.py  search.py  streams.py
cds_migrator_kit/rdm/migration/transform/: __init__.py  transform.py  users.py
cds_migrator_kit/rdm/records/: __init__.py  streams.py
cds_migrator_kit/rdm/records/load/: __init__.py  approval_request.py  ep_approval_entry.py  ep_approval_load.py  load.py
cds_migrator_kit/rdm/records/transform/: __init__.py  config.py  transform.py
cds_migrator_kit/rdm/stats/: event_generator.py  extract.py  load.py  log.py  runner.py  search.py  streams.py
cds_migrator_kit/rdm/users/: api.py  load.py  log.py  runner.py  streams.py
cds_migrator_kit/rdm/users/transform/: __init__.py  transform.py  users.py
cds_migrator_kit/records/: __init__.py  cli.py  errors.py  handlers.py  log.py  records.py  utils.py  validators.py  views.py
cds_migrator_kit/records/templates/cds_migrator_kit_records/: base.html  document.html  index.html  journal.html  multipart.html  records.html  rectype_missing.html  serial.html  summer-student.html  welcome.html
cds_migrator_kit/reports/: __init__.py  handlers.py  log.py  views.py
cds_migrator_kit/reports/templates/cds_migrator_kit_records/: base.html  comments.html  index.html  records.html  welcome.html
cds_migrator_kit/runner/: __init__.py  runner.py
cds_migrator_kit/templates/cds_migrator_kit/: base.html  index.html  welcome.html
cds_migrator_kit/transform/: __init__.py  dumper.py  errors.py  overdo.py
cds_migrator_kit/transform/xml_processing/models/: __init__.py  base.py
cds_migrator_kit/transform/xml_processing/quality/: contributors.py  decorators.py  parsers.py  regex.py
cds_migrator_kit/transform/xml_processing/rules/: base.py
cds_migrator_kit/users/: __init__.py  api.py  load.py  transform.py
cds_migrator_kit/videos/: README.md  __init__.py  migration_config.py
cds_migrator_kit/videos/scripts/: copy_files.py  run_failed_tasks.py
cds_migrator_kit/videos/weblecture_migration/: __init__.py  cli.py  logger.py  streams.py  streams.yaml
cds_migrator_kit/videos/weblecture_migration/load/: __init__.py  helpers.py  load.py
cds_migrator_kit/videos/weblecture_migration/stats/: __init__.py  load.py  (+3 more)
docker/: wait-for-services.sh
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  examplesapp.rst  index.rst  installation.rst  make.bat  usage.rst
examples/: app-setup.sh  app.py
scripts/: CERNBulletinJournals.csv  copy_collection_files.py  copy_comments_attached_files.py  dump_comments_to_migrate.py  dump_legacy_recids_to_redirect.py  fix_created_dates.py  migrate.sh  migrate_CERNBull_journals.py  opensearch-init.sh  postgres-init.sh  snapshot.sh
tests/: __init__.py  conftest.py  helpers.py  test_cds_migrator_kit.py  test_examples_app.py  test_json_translation_rules.py  test_migration.py
tests/cds-rdm/: __init__.py  conftest.py  helpers.py  test_access_permissions.py  test_base_migration.py  test_base_rules.py  test_bulletin_issue.py  test_comments_migration.py  test_contributors_quality.py  test_ep_approval_entry.py  test_full_migration.py  test_hr_migration.py  test_it_migration.py  test_it_override_delegation.py  test_json_translation_rules.py  test_load_reviewers.py  test_new_version_publication_date.py  test_publications_rules.py  test_record_inclusion_request.py  test_restricted_migration.py  test_scientific_community.py  test_thesis_migration.py  test_transform_metadata_title.py  test_transform_versions.py
tests/cds-rdm/data/: summer_note.json
tests/cds-videos/: __init__.py  conftest.py  test_videos_transform_files.py  test_videos_transform_rules.py
tests/cds-videos/data/: streams.yaml
tests/data/: all_fields.json  book1.json  summer_note.json
(+145 files in other folders)
