# -*- coding: utf-8 -*-
#
# Copyright (C) 2018 CERN.
#
# cds-migrator-kit is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = cds-migrator-kit
version = attr: cds_migrator_kit.__version__

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    invenio-app-rdm[opensearch2]>=13.0.0b1.dev4
    invenio-logging[sentry_sdk]>=2.0
    cds-rdm @ git+https://github.com/CERNDocumentServer/cds-rdm#egg=cds-rdm&subdirectory=site
    cds-dojson>=0.12.0
    invenio-rdm-migrator>=5.0.0
    lxml>=4.6.5
    ipython!=8.1.0
    uwsgi>=2.0
    uwsgitop>=0.11
    uwsgi-tools>=1.1.1
    flask-mail>=0.9.0,<0.10.0
    fuzzywuzzy>=0.18.0
    python-Levenshtein>=0.25.1
    # needed to run the server
    gunicorn

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=3


[options.entry_points]
console_scripts =
    migrator = invenio_app.cli:cli
flask.commands =
    migration = cds_migrator_kit.rdm.migration.cli:migration
invenio_base.apps =
    cds_migrator_kit = cds_migrator_kit:CdsMigratorKit
invenio_config.module =
    invenio_app_rdm = cds_migrator_kit.migration_config
invenio_base.blueprints =
    cds_migrator_kit_views = cds_migrator_kit.records.views:blueprint
cds_migrator_kit.migrator.affiliations.model =
   affiliations = cds_migrator_kit.rdm.migration.transform.models.affiliations:model
cds_migrator_kit.migrator.models =
   ssn = cds_migrator_kit.rdm.migration.transform.models.summer_student_report:model
   cms_note = cds_migrator_kit.rdm.migration.transform.models.note:model
   people = cds_migrator_kit.rdm.migration.transform.models.people:model
cds_migrator_kit.migrator.rules.base =
   base = cds_migrator_kit.rdm.migration.transform.xml_processing.rules.base
cds_migrator_kit.migrator.rules.affiliations =
   affiliations = cds_migrator_kit.rdm.migration.transform.xml_processing.rules.affiliations
cds_migrator_kit.migrator.rules.ssn =
   base = cds_migrator_kit.rdm.migration.transform.xml_processing.rules.base
   summer_students = cds_migrator_kit.rdm.migration.transform.xml_processing.rules.summer_student_report
cds_migrator_kit.migrator.rules.people =
    people = cds_migrator_kit.rdm.migration.transform.xml_processing.rules.people
invenio_pidstore.minters =
    legacy = cds_rdm.minters:legacy_recid_minter

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = cds_migrator_kit/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = cds_migrator_kit/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = cds_migrator_kit/translations/messages.pot
output-dir = cds_migrator_kit/translations/

[update_catalog]
input-file = cds_migrator_kit/translations/messages.pot
output-dir = cds_migrator_kit/translations/

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=cds_migrator_kit --cov-report=term-missing
testpaths = tests cds_migrator_kit
live_server_scope = module
