# -*- coding: utf-8 -*-
#
# Copyright (C) 2018 CERN.
#
# cds-migrator-kit is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = cds-migrator-kit
version = attr: cds_migrator_kit.__version__

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    sentry-sdk>=1.45,<2.0.0
    cds-dojson>=0.12.0
    invenio-rdm-migrator>=5.0.0
    lxml>=4.6.5
    ipython!=8.1.0
    uwsgi>=2.0
    uwsgitop>=0.11
    uwsgi-tools>=1.1.1
    flask-mail>=0.9.0,<0.10.0
    fuzzywuzzy>=0.18.0
    python-Levenshtein>=0.25.1
    # needed to run the server
    gunicorn

[options.extras_require]
rdm =
    invenio-app-rdm[opensearch2]>=13.0.0b3.dev0
    cds-rdm @ git+https://github.com/CERNDocumentServer/cds-rdm@master#egg=cds-rdm&subdirectory=site
    invenio-preservation-sync==0.2.0
    invenio-cern-sync @ git+https://github.com/cerndocumentserver/invenio-cern-sync@v0.2.0#egg=invenio-cern-sync

videos =
    marshmallow<4.0
    cds @ git+https://github.com/CERNDocumentServer/cds-videos@additional-files#egg=cds

tests =
    pytest-black>=0.3.0
    pytest-invenio>=3.0.0,<4.0.0
    pytest-mock>=3


[options.entry_points]
console_scripts =
    migrator = invenio_app.cli:cli
flask.commands =
    migration = cds_migrator_kit.cli:cli
invenio_base.apps =
    cds_migrator_kit = cds_migrator_kit:CdsMigratorKit
invenio_config.module =
    invenio_app_rdm = cds_migrator_kit.base_config
invenio_base.blueprints =
    cds_migrator_kit_views = cds_migrator_kit.reports.views:blueprint
cds_migrator_kit.migrator.affiliations.model =
    affiliations = cds_migrator_kit.rdm.affiliations.xml_processing.models.affiliations:affiliation_model
cds_migrator_kit.migrator.users.model =
    people = cds_migrator_kit.rdm.users.transform.xml_processing.models.people:people_model
cds_migrator_kit.migrator.submitter.model =
    submitter = cds_migrator_kit.rdm.users.transform.xml_processing.models.submitter:submitter_model
cds_migrator_kit.migrator.models =
    ssn = cds_migrator_kit.rdm.records.transform.models.summer_student_report:sspn_model
    thesis = cds_migrator_kit.rdm.records.transform.models.thesis:thesis_model
    cms_note = cds_migrator_kit.rdm.records.transform.models.note:cms_note_model
    mous = cds_migrator_kit.rdm.records.transform.models.mous:mous_model
    bulletin_issue = cds_migrator_kit.rdm.records.transform.models.bulletin_issue:bull_issue_model
    yellow_rep = cds_migrator_kit.rdm.records.transform.models.yellow_reports:yellow_issue_model
    books = cds_migrator_kit.rdm.records.transform.models.books:book_model
    courier = cds_migrator_kit.rdm.records.transform.models.courier:courier_issue_model
    beams = cds_migrator_kit.rdm.records.transform.models.beams:beams_model
    it = cds_migrator_kit.rdm.records.transform.models.it:it_model
    hr = cds_migrator_kit.rdm.records.transform.models.hr:hr_model
    sy = cds_migrator_kit.rdm.records.transform.models.sy:sy_model
    te = cds_migrator_kit.rdm.records.transform.models.te:te_model
    en = cds_migrator_kit.rdm.records.transform.models.en:en_model
    annual_rep = cds_migrator_kit.rdm.records.transform.models.annual_report:annual_rep_model
cds_migrator_kit.migrator.rules.base =
    base = cds_migrator_kit.transform.xml_processing.rules.base
cds_migrator_kit.migrator.rdm.rules.base =
    base = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
cds_migrator_kit.migrator.rdm.rules.publication =
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
cds_migrator_kit.migrator.rules.affiliations =
   affiliations = cds_migrator_kit.rdm.affiliations.xml_processing.rules.affiliations
cds_migrator_kit.migrator.rules.ssn =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    summer_students = cds_migrator_kit.rdm.records.transform.xml_processing.rules.summer_student_report
cds_migrator_kit.migrator.rules.thesis =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    thesis = cds_migrator_kit.rdm.records.transform.xml_processing.rules.thesis
cds_migrator_kit.migrator.rules.mous =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
cds_migrator_kit.migrator.rules.bulletin_issue =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    bulletin = cds_migrator_kit.rdm.records.transform.xml_processing.rules.bulletin_issue
cds_migrator_kit.migrator.rules.yellow_report =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    yellow_rep = cds_migrator_kit.rdm.records.transform.xml_processing.rules.yellow_report
cds_migrator_kit.migrator.rules.courier =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    bulletin = cds_migrator_kit.rdm.records.transform.xml_processing.rules.bulletin_issue
    courier = cds_migrator_kit.rdm.records.transform.xml_processing.rules.courier
;cds_migrator_kit.migrator.rules.beams =
;    base = cds_migrator_kit.transform.xml_processing.rules.base
;    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
;    publications = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
;    beams = cds_migrator_kit.rdm.records.transform.xml_processing.rules.beams
cds_migrator_kit.migrator.rules.books =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    books = cds_migrator_kit.rdm.records.transform.xml_processing.rules.books
cds_migrator_kit.migrator.rules.it =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publications = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    it = cds_migrator_kit.rdm.records.transform.xml_processing.rules.it
cds_migrator_kit.migrator.rules.hr =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    hr = cds_migrator_kit.rdm.records.transform.xml_processing.rules.hr
cds_migrator_kit.migrator.rules.sy =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    sy = cds_migrator_kit.rdm.records.transform.xml_processing.rules.sy
cds_migrator_kit.migrator.rules.te =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    te = cds_migrator_kit.rdm.records.transform.xml_processing.rules.te
cds_migrator_kit.migrator.rules.en =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    en = cds_migrator_kit.rdm.records.transform.xml_processing.rules.en
cds_migrator_kit.migrator.rules.annual_rep =
    base = cds_migrator_kit.transform.xml_processing.rules.base
    base_records = cds_migrator_kit.rdm.records.transform.xml_processing.rules.base
    publication = cds_migrator_kit.rdm.records.transform.xml_processing.rules.publications
    annual_rep = cds_migrator_kit.rdm.records.transform.xml_processing.rules.annual_rep
cds_migrator_kit.migrator.rules.people =
    people = cds_migrator_kit.rdm.users.transform.xml_processing.rules.people
invenio_pidstore.minters =
    legacy = cds_migrator_kit.base_minter:legacy
# videos migration
cds_migrator_kit.videos.models =
    video_lecture = cds_migrator_kit.videos.weblecture_migration.transform.models.video_lecture:model
cds_migrator_kit.videos.rules.base =
    base = cds_migrator_kit.videos.weblecture_migration.transform.xml_processing.rules.base
cds_migrator_kit.videos.rules.video_lecture =
    base = cds_migrator_kit.videos.weblecture_migration.transform.xml_processing.rules.base
    video_lecture = cds_migrator_kit.videos.weblecture_migration.transform.xml_processing.rules.video_lecture
cds_migrator_kit.videos.submitter.model =
    videos_submitter = cds_migrator_kit.videos.weblecture_migration.users.transform.xml_processing.models.submitter:videos_submitter_model

[bdist_wheel]
universal = 1

[compile_catalog]
directory = cds_migrator_kit/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = cds_migrator_kit/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = cds_migrator_kit/translations/messages.pot
output-dir = cds_migrator_kit/translations/

[update_catalog]
input-file = cds_migrator_kit/translations/messages.pot
output-dir = cds_migrator_kit/translations/

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=cds_migrator_kit --cov-report=term-missing
testpaths = tests cds_migrator_kit
live_server_scope = module
